--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Service Request Dashboard - SLT Mobitel" />
+    <meta name="author" content="SLT Mobitel" />
+    <title>SR Dashboard - SLT Mobitel</title>
   </head>
   <body>
     <div id="root"></div>
